fixed width with scrollbar issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,8 +8,9 @@ body {
   min-height: 100%;
   width: 100%;
   min-width: 310px;
-  scroll-behavior: smooth;  
+  scroll-behavior: smooth;
   --nav-height: 40px;
+  --stock-height: 48px;
 }
 
 .sec {
@@ -31,6 +32,6 @@ body {
 #page {
   position: relative;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: blueviolet;
 }
